# quickwrench-api

./: .gitignore  Dockerfile  MANIFEST.in  README.md  manage.py  pyproject.toml
.github/workflows/: pr-checks.yml  release.yml
quickwrench_api/: wsgi.py
quickwrench_api/apps/accounts/: forms.py  models.py
quickwrench_api/apps/accounts/migrations/: 0001_initial.py
quickwrench_api/apps/accounts/tests/: test_views.py
quickwrench_api/settings/: base.py
reqs/: dev.txt  prod.txt
src/quickwrench_api/: asgi.py  urls.py  wsgi.py
src/quickwrench_api/apps/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  validators.py  views.py
src/quickwrench_api/apps/accounts/migrations/: 0001_initial.py  0002_account_phone_number.py
src/quickwrench_api/apps/car_makes/: apps.py  models.py  serializers.py  urls.py  views.py
src/quickwrench_api/apps/car_makes/fixtures/: carmakes.json
src/quickwrench_api/apps/car_makes/migrations/: 0001_initial.py
src/quickwrench_api/apps/carmakes/: apps.py  serializers.py  urls.py  views.py
src/quickwrench_api/apps/carmakes/fixtures/: carmakes.json
src/quickwrench_api/apps/carmakes/migrations/: 0001_initial.py
src/quickwrench_api/apps/users/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
src/quickwrench_api/apps/users/migrations/: 0001_initial.py  0002_alter_user_car_make.py
src/quickwrench_api/apps/workshops/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
src/quickwrench_api/apps/workshops/fixtures/: categories.json
src/quickwrench_api/apps/workshops/migrations/: 0001_initial.py  0002_workshop_carmake_alter_service_category.py  0002_workshop_carmakes_alter_service_category.py  (+1 more)
src/quickwrench_api/env/: dev.env
src/quickwrench_api/server/: main.py
src/quickwrench_api/settings/: base.py  env.py
tests/: conftest.py
tests/apps/accounts/: conftest.py  test_views.py
tests/apps/acocunts/: test_views.py
tests/apps/car_makes/: test_views.py
tests/apps/users/: conftest.py  test_views.py
tests/apps/workshops/: conftest.py  contest.py  test_views.py
